<resources>
    <string name="app_name">Odoo Projects</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ma">MaAc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="projects_title">Projects</string>
    <string name="tasks_title">Tasks</string>
    <string name="add_to_favourites_iv">Add to Favourites</string>
    <string name="departments_title">Departments</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="customer">Customer</string>
    <string name="visible_by_all_employees">Visible by all employees</string>
    <string name="visible_by_following_customers">Visible by following customers</string>
    <string name="on_invitation_only">On invitation only</string>
    <string name="privacy">Privacy</string>
    <string name="your_poject_name">Your poject name ...</string>
    <string name="project_manager">Project Manager</string>
    <string name="settings">Settings</string>
    <string name="name_of_the_tasks">Name of the tasks</string>
    <string name="logout">Logout</string>

    <string-array name="project_privacy">
        <item>followers</item>
        <item>portal</item>
        <item>employees</item>
    </string-array>
</resources>
