<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_outline_business_24px"
            android:title="@string/projects_title" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_round_assignment_24px"
            android:title="@string/tasks_title" />
        <item
            android:id="@+id/nav_departments"
            android:icon="@drawable/ic_outline_assignment_ind_24px"
            android:title="@string/departments_title"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

</menu>
